<resources>
    <!-- <string name=""></string> -->
    <string name="app_name">VisitCardApp</string>
    <string name="app_title">Visit card creation App</string>
    <string name="card_create">Create</string>
    <string name="card_send">Send</string>
    <string name="card_display">Display</string>
    <string name="create_from_qr">Create with QR</string>
    <string name="create_from_text_input">Create from contact</string>
    <string name="ask_surname">Surname : </string>
    <string name="full_name">Full name : </string>
    <string name="first_choice">Choice 1 : </string>
    <string name="second_choice">Choice 2 : </string>
    <string name="third_choice">Choice 3 : </string>
    <string name="ask_phone">Phone number : </string>
    <string name="ask_job">Job : </string>
    <string name="confirm_creation">Done</string>
    <string name="register_qr">Save as visit card</string>
    <string name="first_contact">First contact</string>
    <string name="second_contact">Second contact</string>
    <string name="third_contact">Third contact</string>
    <string name="fourth_contact">Fourth contact</string>
    <string name="fifth_contact">Fifth contact</string>
    <string name="ask_email">Email : </string>
    <string name="ask_adr">Address : </string>
    <string name="ask_website">Website : </string>
    <string name="display_own">Display my card</string>
    <string name="others">Others</string>
    <string name="menu">Back to my card</string>
    <string name="card_saved">Card saved !</string>
    <string name="edit">Edit</string>
    <string name="create_card_first">Create your card first</string>
    <string name="card_not_found">Contact has no visit card</string>
    <string name="card_already_exists">Contact already has a card</string>
    <string name="create_user_card">Create user card</string>
    <string name="ask_first_name">First name : </string>
    <string name="no_number">Contact number required</string>
    <string name="sameDisplay">Can\'t display the same values</string>
    <string name="choose_info">Choose your card display order</string>
    <string name="invalid_QR">QR Code isn\'t valid for the app</string>
    <string name="create_profile">Create profile</string>
    <string name="saving_card">Saving the visit card of the contact</string>
    <string name="sending_card_error">Enter name and number to send card</string>
</resources>
