<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fr.unice.visitcardapp.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:id="@+id/textView"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_display"
        android:id="@+id/button_display"
        android:layout_marginTop="70dp"
        android:textStyle="bold"
        android:layout_below="@+id/button_send"
        android:layout_alignStart="@+id/button_send"
        android:layout_alignEnd="@+id/button_send" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_send"
        android:id="@+id/button_send"
        android:layout_marginTop="65dp"
        android:textStyle="bold"
        android:layout_below="@+id/button_create"
        android:layout_alignStart="@+id/button_create"
        android:layout_alignEnd="@+id/button_create" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_create"
        android:id="@+id/button_create"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="52dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
