<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fr.unice.visitcardapp.MainActivity"
    android:background="@mipmap/radialgradientback">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_saved"
        android:id="@+id/textViewCreated"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:typeface="normal"
        android:fontFamily="sans-serif"
        android:textSize="30sp"
        android:textColor="#000"
        android:textAlignment="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:id="@+id/button_menu"
        android:layout_marginTop="57dp"
        android:layout_below="@+id/button_display"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_display"
        android:id="@+id/button_display"
        android:layout_marginTop="65dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:layout_below="@+id/textViewCreated"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
